# smart-alarm

./: .gitignore  AGENTS.md  CLI.md  CMakeLists.txt  PLAN.md  README.md  TECH.md
.agents/skills/smart-alarm-build/: SKILL.md
.github/workflows/: release.yml
agents/skills/smart-alarm-cli/: SKILL.md
installer/config/: config.xml  controller.qs
installer/scripts/: update_user_path.ps1
scripts/: prepare_installer_metadata.ps1
src/: cli_main.cpp  main.cpp  resources.qrc
src/app/: app_controller.cpp  app_controller.h  command_client.cpp  command_client.h  command_server.cpp  command_server.h  minute_scheduler.cpp  minute_scheduler.h
src/audio/: audio_player.cpp  audio_player.h  audio_queue.cpp  audio_queue.h  sound_pattern_parser.cpp  sound_pattern_parser.h  sound_preset_registry.cpp  sound_preset_registry.h  tone_generator.cpp  tone_generator.h
src/core/: notification.cpp  notification.h  notification_validator.cpp  notification_validator.h  schedule_evaluator.cpp  schedule_evaluator.h  schedule_formatter.cpp  schedule_formatter.h  time_input_normalizer.cpp  time_input_normalizer.h
src/storage/: config_store.cpp  config_store.h
src/ui/: app_icon.cpp  app_icon.h  color_palette_widget.cpp  color_palette_widget.h  date_edit.cpp  date_edit.h  day_of_week_selector.cpp  day_of_week_selector.h  global_settings_dialog.cpp  global_settings_dialog.h  lucide_icons.cpp  lucide_icons.h  main_window.cpp  main_window.h  notification_actions_delegate.cpp  notification_actions_delegate.h  notification_editor_dialog.cpp  notification_editor_dialog.h  notification_popup.cpp  notification_popup.h  notification_state_delegate.cpp  notification_state_delegate.h  notification_table_model.cpp  notification_table_model.h  popup_manager.cpp  popup_manager.h  position_picker_widget.cpp  position_picker_widget.h  slide_to_dismiss.cpp  slide_to_dismiss.h  time_edit.cpp  time_edit.h  tray_controller.cpp  tray_controller.h
tests/: CMakeLists.txt
tests/audio/: test_sound_pattern_parser.cpp  test_tone_generator.cpp
tests/core/: test_schedule_evaluator.cpp  test_time_input_normalizer.cpp
tests/storage/: test_config_store.cpp
